--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1014,102 +1014,102 @@
   "exchange_logout": "sign out",
   "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?",
   "net_error_hint": "Network error",
-  "atlas_current_age": "当前纪元",
-  "block_height": "区块高度",
-  "atlas_elected_nodes": "当选节点",
-  "atlas_candidate_nodes": "总节点",
-  "atlas_next_age": "纪元剩余块数",
-  "atlas_create_node": "创建Atlas节点",
-  "atlas_launch_tutorial": "开通教程",
-  "atlas_fee_rate": "管理费",
-  "atlas_sign_rate": "签名率",
-  "atlas_total_staking": "总抵押",
-  "atlas_reward_rate": "预期收益",
-  "atlas_node_rank": "节点排名",
+  "atlas_current_age": "Current epoch",
+  "block_height": "Block height",
+  "atlas_elected_nodes": "Committee",
+  "atlas_candidate_nodes": "Atlas node",
+  "atlas_next_age": "Remaining blocks",
+  "atlas_create_node": "Create an Atlas node",
+  "atlas_launch_tutorial": "Tutorial",
+  "atlas_fee_rate": "Management fee",
+  "atlas_sign_rate": "Sign rate",
+  "atlas_total_staking": "Total staking",
+  "atlas_reward_rate": "Expected rewards",
+  "atlas_node_rank": "Rank",
   "edit": "Edit",
   "save": "Save",
-  "create_atlas_node": "Create Atlas node",
-  "last_step": "Previous",
+  "create_atlas_node": " Create an Atlas node ",
+  "last_step": "Last ",
   "next_step": "Next",
-  "not_open_please_wait": "待开放，敬请期待",
-  "important_hint": "重要提示",
-  "got_it": "知道了",
-  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于(北京时间 2020.11.02之前）映射为主链币，无法在未支持HYN主网的交易所或者钱包充提交易，之后HYN ERC20变为无效币！",
-  "exchange_logout_hint": "You are about to exit the authorization status. Are you sure you want to exit?",
-  "bio_auth_expired_hint": "Biometrics has expired, please enter password",
-  "map3_main_page_title": "Map3 map service node",
-  "dex_account_error": "Abnormal data",
-  "dex_account_data_abnormal": "DEX account data is abnormal",
-  "dex_fix_account": "Fix account",
-  "dex_fix_account_hint": "In order to avoid the account cannot be used normally, please repair the data as soon as possible",
-  "dex_fix_account_dialog_title": "Fix account",
-  "dex_fix_account_balance_condition": "The system will re-settlement the abnormal transaction, and your account balance may change. In order to successfully complete the repair, please ensure that the available balance of your trading account meets the following conditions:",
+  "not_open_please_wait": "Unavailable function please stay tuned",
+  "important_hint": "Note",
+  "got_it": "Got it",
+  "wallet_show_atlas_alert": "Atlas HYN has been available now. Please swap your ERC20 HYN before November 2nd, 2020 (GMT+8). ERC20 will be no longer valid for mainnet function ",
+  "exchange_logout_hint": "Your authorization will be expired if you log out, continue?",
+  "bio_auth_expired_hint": "Bio authenticity is expired, please enter your password ",
+  "map3_main_page_title": "Map3 nodes",
+  "dex_account_error": "Data error",
+  "dex_account_data_abnormal": "DEX account data error",
+  "dex_fix_account": "Fix your account",
+  "dex_fix_account_hint": "Please fix your account before any further move",
+  "dex_fix_account_dialog_title": "Status of fixing account",
+  "dex_fix_account_balance_condition": "the system will resettle suspicious transactions, the balance in your account may change. To continue, please ensure the balance in your exchange account reaches the following requirements:",
   "not_less_than": "Not less than",
-  "dex_fix_account_success": "The repair is successful!",
-  "dex_fix_accounta_fail": "Repair failed! Please ensure that the available balance in your trading account meets the following conditions",
-  "dex_fixing_account": "Repairing, please wait",
-  "wallet_show_dex_account_error": "Your dex account data is abnormal, please fix it as soon as possible! see details",
+  "dex_fix_account_success": "Fixed! ",
+  "dex_fix_accounta_fail": "Failed to fix please ensure the balance in your exchange account reaches the following requirements",
+  "dex_fixing_account": "Fixing, please wait",
+  "wallet_show_dex_account_error": "Data error in your dex account, please fix it. details ",
   "status": "status",
-  "dex_settlement_error": "The balance has transferred to wallet, but the DEX data settlement failed",
-  "exchange_withdraw_status_9": "Abnormal withdrawal bill",
-  "wallet_send_fix_dex_account": "Your dex account data is abnormal, please fix it first!",
-  "dex_fix_account_contact_us": "If you have any questions, please contact customer service",
-  "duplicate_identity_hint": "节点号已被占用，请修改!",
-  "my_nodes": "我的节点",
-  "lastest_launched_nodes": "最新启动的节点",
-  "check_after_has_wallet": "请创建或导入钱包后查看",
-  "my_nodes_empty": "没有我的节点，您可以创建节点",
-  "no_lastest_active_nodes": "没有最新启动的节点，您可以创建节点",
-  "check_reward": "查看收益",
-  "check_more": "查看更多",
-  "map3_nodes": "Map3地图服务节点",
-  "map3_nodes_v1": "Map3节点（v1.0）",
-  "tutorial": "开通教程",
-  "map3_introduction": "Map3已开放云节点抵押，通过创建和委托抵押合约有效提升服务质量和网络安全，提供全球去中心化地图服务。节点参与者将在合约到期后按抵押量获得奖励。",
-  "map3_introduce_title": "Map3节点介绍",
-  "exchange_main_block_hyn": "兑换主链币",
-  "wallet_transfer_title": "你有未确认的转账，继续转账将被覆盖。",
-  "wallet_symbol_pair_tips": "即将开通该交易对，敬请期待!",
-  "wallet_cancel_transfer_tips": "取消交易操作无法保证能够成功取消您的原始交易。如果取消成功，您将被收取上述交易费用。",
-  "wallet_cancel_send_tips": "已发送取消操作，请稍后刷新。",
-  "wallet_transaction_finish_tips": "交易即将完成，无法取消。",
-  "wallet_speed": "加速",
-  "wallet_speed_transfer_tips": "加速交易操作无法保证能够成功加速您的原始交易。如果加速成功，您将被收取更高的交易费用。",
-  "wallet_have_speed_tips": "已发送加速操作，请稍后刷新。",
-  "wallet_translation_finish_not_speed_tips": "交易即将完成，无法加速。",
-  "wallet_fail_title": "失败",
-  "transfer": "转账",
-  "msg_create_atlas": "创建Atlas",
-  "msg_edit_atlas": "编辑Atlas",
-  "msg_re_delegation": "复抵押",
-  "msg_cancel_re_delegation": "取消复抵押",
-  "msg_collect_re_delegation_reward": "提取复抵押奖励",
-  "msg_create_atlas": "创建Map3节点",
-  "msg_collect_micro_staking_rewards" :"提取微抵押奖励",
-  "msg_renew_map3": "下期预设",
-  "msg_un_micro_delegate": "部分撤销",
-  "msg_micro_delegate": "微抵押",
-  "msg_edit_map3": "编辑Map3节点",
-  "msg_terminate_map3": "终止Map3节点",
-  "mapping": "mapping",
-  "atlas_transfer_broadcast_success_description": "已在区块链上网络广播转账的消息，区块链网络需要6秒钟开采验证。",
-  "check_for_detail_info": "查看详细信息",
-  "transfer_successful": "转账成功",
-  "failed": "失败",
-  "transfer_amount": "金额",
-  "transfer_gas_fee": "矿工费",
-  "transfer_id": "交易号",
-  "from_address": "收款地址",
-  "transfer_to_address": "付款地址",
-  "transfer_hash": "转账Hash:",
-  "transfer_status": "状态:",
-  "tx_age": "纪元:",
-  "tx_block": "区块",
-  "tx_time": "时间",
-  "tx_from_address": "付款地址",
-  "tx_to_address": "收款地址",
-  "tx_amount": "金额",
-  "tx_type": "类型",
-  "tx_input_data": "输入数据"
+  "dex_settlement_error": "Suspicious transaction，failed to settle dex data ",
+  "exchange_withdraw_status_9": "Failed to withdraw",
+  "wallet_send_fix_dex_account": "DEX account error，please fix it",
+  "dex_fix_account_contact_us": "Contact our staff if you have any questions",
+  "duplicate_identity_hint": "Node number is taken please choose another one",
+  "my_nodes": "My node",
+  "lastest_launched_nodes": "Latest initiated Map3 node",
+  "check_after_has_wallet": "Please create or import a wallet to continue",
+  "my_nodes_empty": "No node is found you can create your own",
+  "no_lastest_active_nodes": " No latest initiated node is found you can create your own ",
+  "check_reward": "Rewards",
+  "check_more": "More",
+  "map3_nodes": "Map3 nodes",
+  "map3_nodes_v1": "Map3 node（v1.0）",
+  "tutorial": " Tutorial",
+  "map3_introduction": " Map3 node staking has been open to all. Service and security will be enhanced by initiating or delegating a Map3 node. Participants will be rewarded pro rata to their staking after it's expired. ",
+  "map3_introduce_title": "What’s Map3 node?",
+  "exchange_main_block_hyn": "Swap your token",
+  "wallet_transfer_title": "There’s an unconfirmed transfer. If continue, the existing transfer request will be cancelled.",
+  "wallet_symbol_pair_tips": "Trading pair not open yet, stay tuned!",
+  "wallet_cancel_transfer_tips": " There is no guarantee that the previous order will be cancelled successfully. If it is, you'll be charged for it. ",
+  "wallet_cancel_send_tips": "Cancellation request sent, pls refresh later.",
+  "wallet_transaction_finish_tips": "Unable to cancel the transaction request。",
+  "wallet_speed": "Speed up",
+  "wallet_speed_transfer_tips": " There is no guarantee that paying more fee can cover your previous order. You'll be charged more if it is successful. ",
+  "wallet_have_speed_tips": "Speed up request sent，pls refresh later.",
+  "wallet_translation_finish_not_speed_tips": "Unable to speed up for current transaction.",
+  "wallet_fail_title": "Failed",
+  "transfer": "Transfer",
+  "msg_create_atlas": "Initiate Atlas Node",
+  "msg_edit_atlas": "Edit Atlas",
+  "msg_re_delegation": "Re-staking",
+  "msg_cancel_re_delegation": "Cancel re-staking",
+  "msg_collect_re_delegation_reward": "Withdraw re-staking rewards",
+  "msg_create_map3": "Create Map3 node",
+  "msg_collect_micro_staking_rewards" :" Withdraw micro-staking rewards",
+  "msg_renew_map3": "Default next period",
+  "msg_un_micro_delegate": "Withdraw partial delegation",
+  "msg_micro_delegate": "Micro-staking",
+  "msg_edit_map3": "Edit Map3 node",
+  "msg_terminate_map3": "Suspend Map3 node",
+  "mapping": "Swapping",
+  "atlas_transfer_broadcast_success_description": "Transaction message has been broadcast to the network. It will take 6 sec. to verify。",
+  "check_for_detail_info": "Check details",
+  "transfer_successful": "Transfer succeded",
+  "failed": "Failed",
+  "transfer_amount": "Amount",
+  "transfer_gas_fee": "Gas fee",
+  "transfer_id": "Transaction id",
+  "from_address": "Receipt address",
+  "transfer_to_address": "Payment address",
+  "transfer_hash": "Transfer Hash:",
+  "transfer_status": "Status:",
+  "tx_age": "Epoch:",
+  "tx_block": "Block",
+  "tx_time": "Time",
+  "tx_from_address": "Payment address",
+  "tx_to_address": "Receipt address",
+  "tx_amount": "Amount",
+  "tx_type": "Type",
+  "tx_input_data": "Input data",
+  "help": "Help"
 }
-
