--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1002,27 +1002,27 @@
   "exchange_logout": "退出登錄",
   "exchange_logout_hint": "您將要退出授權狀態，確定要退出嗎？",
   "net_error_hint": "網絡錯誤",
-  "atlas_current_age": "当前纪元",
-  "block_height": "区块高度",
-  "atlas_elected_nodes": "当选节点",
-  "atlas_candidate_nodes": "总节点",
-  "atlas_next_age": "纪元剩余块数",
-  "atlas_create_node": "创建Atlas节点",
-  "atlas_launch_tutorial": "开通教程",
-  "atlas_fee_rate": "管理费",
-  "atlas_sign_rate": "签名率",
-  "atlas_total_staking": "总抵押",
-  "atlas_reward_rate": "预期收益",
-  "atlas_node_rank": "节点排名",
-  "edit": "编辑",
+  "atlas_current_age": "當前紀元",
+  "block_height": "區塊高度",
+  "atlas_elected_nodes": "當選節點",
+  "atlas_candidate_nodes": "總節點",
+  "atlas_next_age": "紀元剩余塊數",
+  "atlas_create_node": "創建Atlas節點",
+  "atlas_launch_tutorial": "開通教程",
+  "atlas_fee_rate": "管理費",
+  "atlas_sign_rate": "簽名率",
+  "atlas_total_staking": "總抵押",
+  "atlas_reward_rate": "預期收益",
+  "atlas_node_rank": "節點排名",
+  "edit": "編輯",
   "save": "保存",
   "create_atlas_node": "創建Atlas節點",
-  "last_step": "上一步",
-  "next_step": "下一步",
+  "last_step": "上壹步",
+  "next_step": "下壹步",
   "not_open_please_wait": "待開放，敬請期待",
   "important_hint": "重要提示",
   "got_it": "知道了",
-  "wallet_show_atlas_alert": "HYN主链币已上线，请将HYN ERC20于(北京时间 2020.11.02之前）映射为主链币，无法在未支持HYN主网的交易所或者钱包充提交易，之后HYN ERC20变为无效币！",
+  "wallet_show_atlas_alert": "HYN主鏈幣已上線，請將HYN ERC20於(北京時間 2020.11.02之前）映射為主鏈幣，無法在未支持HYN主網的交易所或者錢包充提交易，之後HYN ERC20變為無效幣！",
   "bio_auth_expired_hint": "生物識別已過期，請輸入密碼",
   "map3_main_page_title": "Map3地圖服務節點",
   "dex_account_error": "數據異常",
@@ -1030,32 +1030,32 @@
   "dex_fix_account": "修復賬戶狀態",
   "dex_fix_account_hint": "為了避免賬號不能正常使用，請盡快修復數據",
   "dex_fix_account_dialog_title": "修復賬戶狀態",
-  "dex_fix_account_balance_condition": "系統將對異常交易進行重新結算，您的賬戶餘額可能會有變動，為了順利完成修復，請確保你的交易賬戶可用餘額滿足以下條件:",
+  "dex_fix_account_balance_condition": "系統將對異常交易進行重新結算，您的賬戶餘額可能會有變動，為了順利完成修復，請確保妳的交易賬戶可用餘額滿足以下條件:",
   "not_less_than": "不少於",
   "dex_fix_account_success": "修復成功啦!",
-  "dex_fix_accounta_fail": "修復失敗! 請確保你的交易賬戶中可用餘額滿足以下條件",
+  "dex_fix_accounta_fail": "修復失敗! 請確保妳的交易賬戶中可用餘額滿足以下條件",
   "dex_fixing_account": "修復中，請稍等",
-  "wallet_show_dex_account_error": "你的dex賬戶數據異常，請盡快修復！查看詳情",
+  "wallet_show_dex_account_error": "妳的dex賬戶數據異常，請盡快修復！查看詳情",
   "status": "狀態",
   "dex_settlement_error": "錢包已到賬，DEX數據結算失敗",
   "exchange_withdraw_status_9": "提幣賬單異常",
-  "wallet_send_fix_dex_account": "你的dex賬戶數據異常，請先修復！",
+  "wallet_send_fix_dex_account": "妳的dex賬戶數據異常，請先修復！",
   "dex_fix_account_contact_us": "如有疑問，請聯繫客服",
-  "duplicate_identity_hint": "节点号已被占用，请修改!",
-  "my_nodes": "我的节点",
-  "lastest_launched_nodes": "最新启动的节点",
-  "check_after_has_wallet": "请创建或导入钱包后查看",
-  "my_nodes_empty": "没有我的节点，您可以创建节点",
-  "no_lastest_active_nodes": "没有最新启动的节点，您可以创建节点",
+  "duplicate_identity_hint": "節點號已被占用，請修改!",
+  "my_nodes": "我的節點",
+  "lastest_launched_nodes": "最新啟動的節點",
+  "check_after_has_wallet": "請創建或導入錢包後查看",
+  "my_nodes_empty": "沒有我的節點，您可以創建節點",
+  "no_lastest_active_nodes": "沒有最新啟動的節點，您可以創建節點",
   "check_reward": "查看收益",
   "check_more": "查看更多",
-  "map3_nodes": "Map3地图服务节点",
-  "map3_nodes_v1": "Map3节点（v1.0）",
-  "tutorial": "开通教程",
-  "map3_introduction": "Map3已开放云节点抵押，通过创建和委托抵押合约有效提升服务质量和网络安全，提供全球去中心化地图服务。节点参与者将在合约到期后按抵押量获得奖励。",
-  "map3_introduce_title": "Map3节点介绍",
-  "exchange_main_block_hyn": "兑换主链币",
-  "wallet_transfer_title": "你有未確認的轉賬，繼續轉賬將被覆蓋。",
+  "map3_nodes": "Map3地圖服務節點",
+  "map3_nodes_v1": "Map3節點（v1.0）",
+  "tutorial": "開通教程",
+  "map3_introduction": "Map3已開放雲節點抵押，通過創建和委托抵押合約有效提升服務質量和網絡安全，提供全球去中心化地圖服務。節點參與者將在合約到期後按抵押量獲得獎勵。",
+  "map3_introduce_title": "Map3節點介紹",
+  "exchange_main_block_hyn": "兌換主鏈幣",
+  "wallet_transfer_title": "妳有未確認的轉賬，繼續轉賬將被覆蓋。",
   "wallet_symbol_pair_tips": "即將開通該交易對，敬請期待!",
   "wallet_cancel_transfer_tips": "取消交易操作無法保證能夠成功取消您的原始交易。如果取消成功，您將被收取上述交易費用。",
   "wallet_cancel_send_tips": "已發送取消操作，請稍後刷新。",
@@ -1068,10 +1068,10 @@
   "transfer": "轉賬",
   "msg_create_atlas": "創建Atlas",
   "msg_edit_atlas": "編輯Atlas",
-  "msg_re_delegation": "复抵押",
-  "msg_cancel_re_delegation": "取消复抵押",
-  "msg_collect_re_delegation_reward": "提取复抵押獎勵",
-  "msg_create_atlas": "創建Map3節點",
+  "msg_re_delegation": "復抵押",
+  "msg_cancel_re_delegation": "取消復抵押",
+  "msg_collect_re_delegation_reward": "提取復抵押獎勵",
+  "msg_create_map3": "創建Map3節點",
   "msg_collect_micro_staking_rewards" :"提取微抵押獎勵",
   "msg_renew_map3": "下期預設",
   "msg_un_micro_delegate": "部分撤銷",
@@ -1079,23 +1079,24 @@
   "msg_edit_map3": "編輯Map3節點",
   "msg_terminate_map3": "終止Map3節點",
   "mapping": "映射中",
-  "atlas_transfer_broadcast_success_description": "已在区块链上网络广播转账的消息，区块链网络需要6秒钟开采验证。",
-  "check_for_detail_info": "查看详细信息",
-  "transfer_successful": "转账成功",
-  "failed": "失败",
-  "transfer_amount": "金额",
-  "transfer_gas_fee": "矿工费",
-  "transfer_id": "交易号",
+  "atlas_transfer_broadcast_success_description": "已在區塊鏈上網絡廣播轉賬的消息，區塊鏈網絡需要6秒鐘開采驗證。",
+  "check_for_detail_info": "查看詳細信息",
+  "transfer_successful": "轉賬成功",
+  "failed": "失敗",
+  "transfer_amount": "金額",
+  "transfer_gas_fee": "礦工費",
+  "transfer_id": "交易號",
   "from_address": "收款地址",
   "transfer_to_address": "付款地址",
-  "transfer_hash": "转账Hash:",
-  "transfer_status": "状态:",
-  "tx_age": "纪元:",
-  "tx_block": "区块",
-  "tx_time": "时间",
+  "transfer_hash": "轉賬Hash:",
+  "transfer_status": "狀態:",
+  "tx_age": "紀元:",
+  "tx_block": "區塊",
+  "tx_time": "時間",
   "tx_from_address": "付款地址",
   "tx_to_address": "收款地址",
-  "tx_amount": "金额",
-  "tx_type": "类型",
-  "tx_input_data": "输入数据"
+  "tx_amount": "金額",
+  "tx_type": "類型",
+  "tx_input_data": "輸入數據",
+  "help": "帮助文档"
 }
