--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1099,5 +1099,85 @@
   "tx_amount": "Amount",
   "tx_type": "Type",
   "tx_input_data": "Input data",
-  "help": "Help"
+  "help": "Help",
+  "action_create_map3": "创建 Map3节点",
+  "detail_create_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
+  "action_delegate_map3": "参与 Map3节点",
+  "detail_share_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
+  "action_map3_collect": "Map3提币",
+  "action_map3_cancel": "Map3撤销抵押",
+  "action_map3_teminate": "Map3终止抵押",
+  "action_map3_cancel_confirmed": "Map3取消节点",
+  "action_map3_add": "Map3节点分裂",
+  "action_atals_receive_award": "提取奖励",
+  "action_map3_edit": "编辑Map3节点",
+  "action_map3_pre_edit": "修改预设",
+  "action_atlas_edit": "编辑Atlas节点",
+  "action_active_node": "激活Atlas节点",
+  "action_atlas_stake": "参与Atlas节点",
+  "action_cancel_stake": "撤销Map3节点",
+  "atlas_brocast_message_success": "已在区块链上网络广播 【{action}】的消息，区块链网络需要约6秒开采验证。",
+  "check_nodes": "查看节点",
+  "cancel_delegate": "撤销抵押",
+  "receive_wallet": "到账钱包",
+  "node_total_staking": "节点总抵押",
+  "my_staking": "我的抵押",
+  "cancel_amount": "撤销数量",
+  "node_amount": "节点金额",
+  "please_enter_withdraw_amount": "请输入提币数量",
+  "please_enter_correct_amount": "请正确的输入数据",
+  "over_your_staking": "超过您的抵押量",
+  "remain_delegation_not_less_than": "撤销后剩余量不能少于{minRemain}",
+  "over_node_total_staking": "超过节点总抵押",
+  "cant_cancel_staking": "您仍处于锁仓期中，暂不可撤销抵押",
+  "unlock_remain_epoch": "解锁剩余: {remain}个纪元",
+  "collect_reward": "提取奖励",
+  "map3_node": "Map3节点",
+  "icon": "图标",
+  "node_num": "节点号",
+  "first_time_stake": "首次抵押",
+  "contact": "安全联系",
+  "description": "描述",
+  "cloud_provider": "云服务商",
+  "node_addrees": "节点地址",
+  "confirm_edit_node": "确认编辑节点",
+  "confirm_create_node": "确认创建节点",
+  "you_will_do_map3": "你即将要{action}如下Map3节点",
+  "please_enter_node_name": "请输入节点名称",
+  "please_input_node_num": "请输入节点号",
+  "please_enter_node_address": "请输入节点网址",
+  "please_input_node_contact": "请输入节点的联系方式",
+  "please_enter_node_description": "请输入节点描述",
+  "create_map3_node": "创建Map3节点",
+  "detailed_introduction": "详细介绍",
+  "active_still_need": "启动所需",
+  "manage_fee_range": "管理费须在{min}%到{max}%之间",
+  "optional_input": "选填",
+  "submit_create": "创建提交",
+  "edit_map3": "编辑Map3节点",
+  "activate_need_1m": "启动所需100万",
+  "node_age": "节龄",
+  "terminate_node": "终止节点",
+  "cant_active_node_after_terminate": "终止后无法再次激活，请谨慎操作！",
+  "confirm_cancel": "确认撤销",
+  "confirm_terminate": "确认终止",
+  "canceling_node": "撤销节点中",
+  "create_date": "创建日期",
+  "join_address": "参与地址",
+  "map3_manage_fee_rule": "管理费的设置根据抵押量来决定，抵押量越高管理费的最大值越高，(计算公式为：个人抵押量 / {amount} x 100%）管理费最高不高于{feeMax}%",
+  "contract_period": "合约周期",
+  "map3_create_min_staking": "创建最低抵押",
+  "amazon_cloud": "亚马逊云",
+  "service_according_location": "根据云所在链路位置就近服务",
+  "epoch": "纪元",
+  "precautions": "注意事项",
+  "cant_cancel_within_7_epoch": "创建7纪元内不可撤销",
+  "activate_node_rule_total_staking": "需要总抵押满{startMin}才能正式启动，你至少需要{createMin}的HYN作为首次抵押，剩余的份额需要其他抵押者参加投入;你也可以一次性抵押{startMin}即可启动节点",
+  "reward_detailed_introduction": "收益详细介绍",
+  "reward_comes_from_pow_and_pos": "节点收益来自map3服务工作量证明和参与atlas权益共识出块证明",
+  "map3_auto_renew_hint": "创建后默认是到期自动续约以获得等多奖励；你也可以在到期前7-14纪元关闭或开启自动续约开关",
+  "check": "查看",
+  "create_now": "立即创建",
+  "delegate_map3": "抵押Map3节点",
+  "cant_cancel_delegation_with_7": "抵押7天内不可撤销"
 }
