--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1220,5 +1220,8 @@
   "please_read_and_agress_dex_policy": "为了更好地体验Titan去中心化交易所，请您先仔细阅读并同意《海伯利安DEX服务协议》",
   "agree_and_continue": "同意并继续",
   "i_hava_read_and_agree_policy": "我已阅读并同意",
-  "still_need_secs": "还需 {count} 秒"
+  "still_need_secs": "还需 {count} 秒",
+  "user_policy": "用户协议",
+  "contact_us": "联系我们",
+  "atlas_mapping_completed": "主网映射已完成，如有疑问请"
 }
