[Add] add fee rate

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1202,8 +1202,8 @@
   "confirm_follow_renew": "你将跟随续约，修改后不能撤回，确定修改吗？",
   "manage_fee_setup": "管理费设置",
   "please_input_valid_manage_fee": "请输入合适的管理费",
-  "manage_fee_not_less_than_10_percent": "管理费不能小于10%",
-  "manage_fee_not_over_20_percent": "管理费不能大于20%",
+  "manage_fee_not_less_than_10_percent": "管理费不能小于{feeRate}%",
+  "manage_fee_not_over_20_percent": "管理费不能大于{feeRate}%",
   "please_input_valid_data": "请正确的输入数据",
   "take_picture": "拍照",
   "you": "你",
