update text strings

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -912,12 +912,12 @@
   "has_revoked": "cancelled",
   "exchange_login_success": "Authorization succeeded",
   "exchange_login_failed": "Authorization failed, please try again",
-  "exchange_auth": "Authorize Exchange",
+  "exchange_auth": "Authorize Swap",
   "exchange_auth_description": "You're about to use {walletName} to authorize this transaction",
   "exchange_loggin_in": "Authorizing",
   "exchange_auth_by_wallet": "Authorize",
-  "exchange_trade": "Trade",
-  "exchange_account": "Exchange account",
+  "exchange_trade": "Swap",
+  "exchange_account": "Swap account",
   "exchange_latest_price": " Last Price",
   "exchange_change_percentage": "Change%",
   "exchange_24h_amount": "24H Volume",
@@ -934,10 +934,10 @@
   "exchange_deal_amount": "Trading Volume",
   "exchange_deal_total": "Turnover",
   "exchange_asset_history": " Finance Records",
-  "exchange_wallet_to_exchange_account": "Wallet to Exchange account",
-  "exchange_exchange_account_to_wallet": "Exchange account to Wallet",
-  "exchange_wallet_to_exchange": "Wallet to Exchange account",
-  "exchange_to_wallet": "Exchange account to Wallet",
+  "exchange_wallet_to_exchange_account": "Wallet to Swap account",
+  "exchange_exchange_account_to_wallet": "Swap account to Wallet",
+  "exchange_wallet_to_exchange": "Wallet to Swap account",
+  "exchange_to_wallet": "Dex account to Wallet",
   "exchange_system_bonus": "System Bonus",
   "exchange_detail": "Details",
   "exchange_type": "Type",
@@ -954,13 +954,13 @@
   "exchange_transfer_min": "Minimum transfer amount",
   "exchange_account_balance": "Balance",
   "exchange_wallet_balance": "Balance",
-  "exchange": "Exchange",
-  "exchange_transfer_hint_wallet_to_exchange": "The transaction from a wallet to exchange account requires confirmation from the entire network, which takes about 15-30 minutes.",
-  "exchange_transfer_hint_account_to_wallet": "To transfer from a exchange account to a wallet, please pay for the fee {withdrawFee} {selectedCoinType} ",
+  "exchange": "Swap",
+  "exchange_transfer_hint_wallet_to_exchange": "The transaction from a wallet to swap account requires confirmation from the entire network, which takes about 15-30 minutes.",
+  "exchange_transfer_hint_account_to_wallet": "To swap from a swap account to a wallet, please pay for the fee {withdrawFee} {selectedCoinType} ",
   "exchange_order_history": "Trade History",
   "exchange_available": "Available",
   "exchange_frozen": "Frozen",
-  "exchange_total_balance": "Total value of exchange account",
+  "exchange_total_balance": "Total value of swap account",
   "exchange_buy": "Buy",
   "exchange_sell": "Sell",
   "exchange_order_list_detail": "Transaction details",
@@ -985,9 +985,9 @@
   "exchange_assets_running_status_2": "airdrop",
   "exchange_assets_status": "Status",
   "exchange_auth_no_wallet": "Please create/import a wallet identity first, and then use the wallet to authorize the transaction function.",
-  "exchange_authorize": "Please authorize trading account",
-  "exchange_ask_auth_again": "Exchange authorization has expired, use the wallet to re-authorize?",
-  "exchange_bio_auth": "Exchange authorization",
+  "exchange_authorize": "Please authorize swap account",
+  "exchange_ask_auth_again": "HSwap authorization has expired, use the wallet to re-authorize?",
+  "exchange_bio_auth": "HSwap authorization",
   "bio_auth": "Biometrics",
   "bio_auth_intro_title_exchange": "Introduction to password-free authorization",
   "bio_auth_exchange_intro_content": "Password-free authorization allows you to save wallet password to the Keychain/Keystore on your mobile device via a secure encryption algorithm to quickly make payments and sign.",
@@ -1221,7 +1221,7 @@
   "you": "你",
   "creator": "创建者",
   "please_read_and_agree_wallet_policy": "为了更好地体验Titan去中心化钱包，请您先仔细阅读并同意《海伯利安钱包服务协议》",
-  "please_read_and_agress_dex_policy": "为了更好地体验Titan去中心化交易所，请您先仔细阅读并同意《海伯利安DEX服务协议》",
+  "please_read_and_agress_dex_policy": "为了更好地体验Titan去中心化兑换，请您先仔细阅读并同意《海伯利安去中心化兑换服务协议》",
   "agree_and_continue": "同意并继续",
   "i_hava_read_and_agree_policy": "我已阅读并同意",
   "still_need_secs": "还需 {count} 秒",
