--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -972,13 +972,13 @@
   "exchange_withdraw_status_8": "已取消",
   "exchange_assets_running_status_2": "空投",
   "exchange_assets_status": "狀態",
-  "exchange_auth_no_wallet": "請先創建/導入錢包身份，然後使用錢包授權使用交易功能。",
-  "exchange_authorize": "請授權交易賬戶",
-  "exchange_ask_auth_again": "交易授權過期，是否使用錢包重新授權？",
-  "exchange_bio_auth": "交易授權",
+  "exchange_auth_no_wallet": "請先創建/導入錢包身份，然後使用錢包授權使用兌換功能。",
+  "exchange_authorize": "請授權兌換賬戶",
+  "exchange_ask_auth_again": "兌換授權過期，是否使用錢包重新授權？",
+  "exchange_bio_auth": "兌換授權",
   "bio_auth": "生物識別",
   "bio_auth_intro_title_exchange": "免密授權",
-  "bio_auth_exchange_intro_content": "免密授權將您的錢包密碼通過安全加密算法存儲至手機設備的Keychain / KeyStore中，交易時調用生物識別（指紋或面容）鑑權，快速完成授權與簽名。",
+  "bio_auth_exchange_intro_content": "免密授權將您的錢包密碼通過安全加密算法存儲至手機設備的Keychain / KeyStore中，兌換時調用生物識別（指紋或面容）鑑權，快速完成授權與簽名。",
   "bio_auth_exchange_intro_content_2": "開啟免密授權後，請妥善備份密碼。如果忘記密碼，可以通過導入助計詞 / 私鑰，重新設置密碼",
   "bio_auth_exchange_risk_title": "Risk reminder",
   "bio_auth_exchange_risk_content": "請了解你的手機設備生物識別的安全等級\n公共手機，請勿開啟免密授權\n",
@@ -1030,10 +1030,10 @@
   "dex_fix_account": "修復賬戶狀態",
   "dex_fix_account_hint": "為了避免賬號不能正常使用，請盡快修復數據",
   "dex_fix_account_dialog_title": "修復賬戶狀態",
-  "dex_fix_account_balance_condition": "系統將對異常交易進行重新結算，您的賬戶餘額可能會有變動，為了順利完成修復，請確保妳的交易賬戶可用餘額滿足以下條件:",
+  "dex_fix_account_balance_condition": "系統將對異常交易進行重新結算，您的賬戶餘額可能會有變動，為了順利完成修復，請確保妳的兌換賬戶可用餘額滿足以下條件:",
   "not_less_than": "不少於",
   "dex_fix_account_success": "修復成功啦!",
-  "dex_fix_accounta_fail": "修復失敗! 請確保妳的交易賬戶中可用餘額滿足以下條件",
+  "dex_fix_accounta_fail": "修復失敗! 請確保妳的兌換賬戶中可用餘額滿足以下條件",
   "dex_fixing_account": "修復中，請稍等",
   "wallet_show_dex_account_error": "妳的dex賬戶數據異常，請盡快修復！查看詳情",
   "status": "狀態",
@@ -1056,7 +1056,7 @@
   "map3_introduce_title": "Map3節點介紹",
   "exchange_main_block_hyn": "兌換主鏈幣",
   "wallet_transfer_title": "妳有未確認的轉賬，繼續轉賬將被覆蓋。",
-  "wallet_symbol_pair_tips": "即將開通該交易對，敬請期待!",
+  "wallet_symbol_pair_tips": "即將開通該兌換對，敬請期待!",
   "wallet_cancel_transfer_tips": "取消交易操作無法保證能夠成功取消您的原始交易。如果取消成功，您將被收取上述交易費用。",
   "wallet_cancel_send_tips": "已發送取消操作，請稍後刷新。",
   "wallet_transaction_finish_tips": "交易即將完成，無法取消。",
@@ -1208,7 +1208,7 @@
   "you": "你",
   "creator": "创建者",
   "please_read_and_agree_wallet_policy": "为了更好地体验Titan去中心化钱包，请您先仔细阅读并同意《海伯利安钱包服务协议》",
-  "please_read_and_agress_dex_policy": "为了更好地体验Titan去中心化交易所，请您先仔细阅读并同意《海伯利安DEX服务协议》",
+  "please_read_and_agress_dex_policy": "为了更好地体验Titan去中心化兌換，请您先仔细阅读并同意《海伯利安去中心化兌換服务协议》",
   "agree_and_continue": "同意并继续",
   "i_hava_read_and_agree_policy": "我已阅读并同意",
   "still_need_secs": "还需 {count} 秒",
