update quote load

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1079,9 +1079,9 @@
   "msg_edit_atlas": "编辑Atlas",
   "msg_re_delegation": "复抵押",
   "msg_cancel_re_delegation": "取消复抵押",
-  "msg_collect_re_delegation_reward": "提取复抵押奖励",
+  "msg_collect_re_delegation_reward": "提出块奖励",
   "msg_create_map3": "创建Map3节点",
-  "msg_collect_micro_staking_rewards" :"提取微抵押奖励",
+  "msg_collect_micro_staking_rewards" :"提微抵押奖励",
   "msg_renew_map3": "下期预设",
   "msg_un_micro_delegate": "部分撤销",
   "msg_micro_delegate": "微抵押",
