--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1070,9 +1070,9 @@
   "msg_edit_atlas": "編輯Atlas",
   "msg_re_delegation": "復抵押",
   "msg_cancel_re_delegation": "取消復抵押",
-  "msg_collect_re_delegation_reward": "提取復抵押獎勵",
+  "msg_collect_re_delegation_reward": "提出塊獎勵",
   "msg_create_map3": "創建Map3節點",
-  "msg_collect_micro_staking_rewards" :"提取微抵押獎勵",
+  "msg_collect_micro_staking_rewards" :"提微抵押獎勵",
   "msg_renew_map3": "下期預設",
   "msg_un_micro_delegate": "部分撤銷",
   "msg_micro_delegate": "微抵押",
