--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1100,86 +1100,86 @@
   "tx_type": "Type",
   "tx_input_data": "Input data",
   "help": "Help",
-  "action_create_map3": "创建 Map3节点",
-  "detail_create_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
-  "action_delegate_map3": "参与 Map3节点",
-  "detail_share_map3": "距离节点启动还需{remain}HYN，你可以邀请 好友参与抵押加速节点启动吧~",
-  "action_map3_collect": "Map3提币",
-  "action_map3_cancel": "Map3撤销抵押",
-  "action_map3_teminate": "Map3终止抵押",
-  "action_map3_cancel_confirmed": "Map3取消节点",
-  "action_map3_add": "Map3节点分裂",
-  "action_atals_receive_award": "提取奖励",
-  "action_map3_edit": "编辑Map3节点",
-  "action_map3_pre_edit": "修改预设",
-  "action_atlas_edit": "编辑Atlas节点",
-  "action_active_node": "激活Atlas节点",
-  "action_atlas_stake": "参与Atlas节点",
-  "action_cancel_stake": "撤销Map3节点",
-  "atlas_brocast_message_success": "已在区块链上网络广播 【{action}】的消息，区块链网络需要约6秒开采验证。",
-  "check_nodes": "查看节点",
-  "cancel_delegate": "撤销抵押",
-  "receive_wallet": "到账钱包",
-  "node_total_staking": "节点总抵押",
-  "my_staking": "我的抵押",
-  "cancel_amount": "撤销数量",
-  "node_amount": "节点金额",
-  "please_enter_withdraw_amount": "请输入提币数量",
-  "please_enter_correct_amount": "请正确的输入数据",
-  "over_your_staking": "超过您的抵押量",
-  "remain_delegation_not_less_than": "撤销后剩余量不能少于{minRemain}",
-  "over_node_total_staking": "超过节点总抵押",
-  "cant_cancel_staking": "您仍处于锁仓期中，暂不可撤销抵押",
-  "unlock_remain_epoch": "解锁剩余: {remain}个纪元",
-  "collect_reward": "提取奖励",
-  "map3_node": "Map3节点",
-  "icon": "图标",
-  "node_num": "节点号",
-  "first_time_stake": "首次抵押",
-  "contact": "安全联系",
-  "description": "描述",
-  "cloud_provider": "云服务商",
-  "node_addrees": "节点地址",
-  "confirm_edit_node": "确认编辑节点",
-  "confirm_create_node": "确认创建节点",
-  "you_will_do_map3": "你即将要{action}如下Map3节点",
-  "please_enter_node_name": "请输入节点名称",
-  "please_input_node_num": "请输入节点号",
-  "please_enter_node_address": "请输入节点网址",
-  "please_input_node_contact": "请输入节点的联系方式",
-  "please_enter_node_description": "请输入节点描述",
-  "create_map3_node": "创建Map3节点",
-  "detailed_introduction": "详细介绍",
-  "active_still_need": "启动所需",
-  "manage_fee_range": "管理费须在{min}%到{max}%之间",
-  "optional_input": "选填",
-  "submit_create": "创建提交",
-  "edit_map3": "编辑Map3节点",
-  "activate_need_1m": "启动所需100万",
-  "node_age": "节龄",
-  "terminate_node": "终止节点",
-  "cant_active_node_after_terminate": "终止后无法再次激活，请谨慎操作！",
-  "confirm_cancel": "确认撤销",
-  "confirm_terminate": "确认终止",
-  "canceling_node": "撤销节点中",
-  "create_date": "创建日期",
-  "join_address": "参与地址",
-  "map3_manage_fee_rule": "管理费的设置根据抵押量来决定，抵押量越高管理费的最大值越高，(计算公式为：个人抵押量 / {amount} x 100%）管理费最高不高于{feeMax}%",
-  "contract_period": "合约周期",
-  "map3_create_min_staking": "创建最低抵押",
-  "amazon_cloud": "亚马逊云",
-  "service_according_location": "根据云所在链路位置就近服务",
-  "epoch": "纪元",
-  "precautions": "注意事项",
-  "cant_cancel_within_7_epoch": "创建7纪元内不可撤销",
-  "activate_node_rule_total_staking": "需要总抵押满{startMin}才能正式启动，你至少需要{createMin}的HYN作为首次抵押，剩余的份额需要其他抵押者参加投入;你也可以一次性抵押{startMin}即可启动节点",
-  "reward_detailed_introduction": "收益详细介绍",
-  "reward_comes_from_pow_and_pos": "节点收益来自map3服务工作量证明和参与atlas权益共识出块证明",
-  "map3_auto_renew_hint": "创建后默认是到期自动续约以获得等多奖励；你也可以在到期前7-14纪元关闭或开启自动续约开关",
-  "check": "查看",
-  "create_now": "立即创建",
-  "delegate_map3": "抵押Map3节点",
-  "cant_cancel_delegation_with_7": "抵押7纪元内不可撤销",
+  "action_create_map3": "Create a Map3 node",
+  "detail_create_map3": "{remain}HYN are required to initiate a node，why not invite your friends to join~",
+  "action_delegate_map3": "Participate in Map3 node",
+  "detail_share_map3": "{remain}HYN are required to initiate a node，why not invite your friends to join~",
+  "action_map3_collect": "Retrieve rewards",
+  "action_map3_cancel": "Cancel staking",
+  "action_map3_teminate": "Suspend Map3 staking",
+  "action_map3_cancel_confirmed": " Cancel Map3 node",
+  "action_map3_add": "Scale Map3 node",
+  "action_atals_receive_award": "Retrieve rewards",
+  "action_map3_edit": "Edit Map3 node",
+  "action_map3_pre_edit": "Edit default",
+  "action_atlas_edit": "Edit Atlas node",
+  "action_active_node": "Activate Atlas node",
+  "action_atlas_stake": "Participate in Atlas node",
+  "action_cancel_stake": "Cancel Map3 node",
+  "atlas_brocast_message_success": "Your 【{action}】has been broadcast，it usually takes 6 senconds。",
+  "check_nodes": "Check node",
+  "cancel_delegate": "Cancel delegation",
+  "receive_wallet": "Receive",
+  "node_total_staking": "Total staking amount",
+  "my_staking": "My staking",
+  "cancel_amount": "Cancel amount",
+  "node_amount": "Node amount",
+  "please_enter_withdraw_amount": "Please enter withdraw amount",
+  "please_enter_correct_amount": "Please enter correct amount",
+  "over_your_staking": "Excess of staking amount",
+  "remain_delegation_not_less_than": "No less than{minRemain} after retrieving your delegation",
+  "over_node_total_staking": "Excess of total staking amount",
+  "cant_cancel_staking": "Delegations can't be retrieved in lockup period",
+  "unlock_remain_epoch": "Remain lockup period: {remain}epoch",
+  "collect_reward": "Retrieve rewards",
+  "map3_node": "Map3 node",
+  "icon": "Icon",
+  "node_num": "Node number",
+  "first_time_stake": "First staking",
+  "contact": "Contact",
+  "description": "Description",
+  "cloud_provider": "Cloud Service Provider",
+  "node_addrees": "Node address",
+  "confirm_edit_node": "Edit the node now",
+  "confirm_create_node": "Create a node now",
+  "you_will_do_map3": "You will{action}the following Map3 node",
+  "please_enter_node_name": "Please enter node name",
+  "please_input_node_num": "Please enter node number",
+  "please_enter_node_address": "Please enter an email for your node",
+  "please_input_node_contact": "Please enter a phone number for your node",
+  "please_enter_node_description": "Please enter a description for your node",
+  "create_map3_node": "Create a Map3 node",
+  "detailed_introduction": "Details",
+  "active_still_need": "HYN is needed",
+  "manage_fee_range": "Commission should be from{min}%to{max}%",
+  "optional_input": "Optional",
+  "submit_create": "Submit",
+  "edit_map3": "Edit Map3 node",
+  "activate_need_1m": "A million is need to initiate",
+  "node_age": "Node age",
+  "terminate_node": "Suspend node",
+  "cant_active_node_after_terminate": "Please note that node will not be activated once being suspended ",
+  "confirm_cancel": "Confirm canceling ",
+  "confirm_terminate": "Confirm suspending",
+  "canceling_node": "Canceling",
+  "create_date": "Create date",
+  "join_address": "Join address",
+  "map3_manage_fee_rule": "Commission is pro rata to the amount of delegation(delegation / {amount} x 100%）commission is not higher than{feeMax}%",
+  "contract_period": "Contract period",
+  "map3_create_min_staking": "Create a minimal staking",
+  "amazon_cloud": "Amazon Cloud",
+  "service_according_location": "Service is provided depending on the location of cloud",
+  "epoch": "Epoch",
+  "precautions": "Tips",
+  "cant_cancel_within_7_epoch": "Delegation can't be retrieved in 7 epochs",
+  "activate_node_rule_total_staking": "{startMin}are needed to initiate，You need at least{createMin}HYN as first delegation，other participants can join remain delegation or you can delegate {startMin}to initiate",
+  "reward_detailed_introduction": "Rewards details",
+  "reward_comes_from_pow_and_pos": "Rewards are from Map3 PoW and Atlas PoS",
+  "map3_auto_renew_hint": "Auto-renewal is default；or you can turn on or off auto-renewal function 7-14 epochs before expired",
+  "check": "Check",
+  "create_now": "Create now",
+  "delegate_map3": "Stake ",
+  "cant_cancel_delegation_with_7": "Delegation can't be retrieved in 7 days",
   "map3_pre_edit_next_epoch": "节点主在到期前倒数第二周设置下一周期是否继续运行，或调整管理费率。抵押者在到期前最后一周可选择是否跟随下一周期",
   "map3_delegate_amount_hint": "需要总抵押满{startMin}HYN才能正式启动，每次参与抵押数额不少于{delegateMin}HYN",
   "total_staking": "总抵押",
