【Update】update translations

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1179,41 +1179,40 @@
   "check": "Check",
   "create_now": "Create now",
   "delegate_map3": "Stake ",
-  "cant_cancel_delegation_with_7": "Delegation can't be retrieved in 7 days",
-  "map3_pre_edit_next_epoch": "节点主在到期前倒数第二周设置下一周期是否继续运行，或调整管理费率。抵押者在到期前最后一周可选择是否跟随下一周期",
-  "map3_delegate_amount_hint": "需要总抵押满{startMin}HYN才能正式启动，每次参与抵押数额不少于{delegateMin}HYN",
-  "total_staking": "总抵押",
-  "current_staking": "当前抵押",
-  "min_staking": "最低抵押",
-  "please_retain_gas_fee": "请预留少量HYN（如：0.0001）作为矿工费",
-  "old_map3": "旧版Map3",
-  "current_reward": "当前奖励",
-  "current_reward_zero": "当前可提奖励为零!",
-  "you_create_or_join_node": "您一共创建或参与了{num}个Map3节点",
-  "confirm_collect": "确认提取",
-  "confirm_collect_reward_to_wallet": "{pretext}截止当前可提奖励为: {balance} HYN 确定全部提取到钱包",
-  "preset_for_next_period": "下期预设",
-  "map3_next_period_manage_fee": "下期管理费",
-  "confirm_mod": "确认修改",
-  "confirm_stop_auto_renew": "你将停止自动续约，修改后不能撤回，确定修改吗？",
-  "confirm_stop_follow_renew": "你将停止跟随续约，修改后不能撤回，确定修改吗？",
-  "confirm_open_auto_renew": "你将开启自动续约，管理费设置为{feeRate}%，修改后不能撤回，确定修改吗？",
-  "please_setup_manage_fee": "请设置管理费",
-  "confirm_follow_renew": "你将跟随续约，修改后不能撤回，确定修改吗？",
-  "manage_fee_setup": "管理费设置",
-  "please_input_valid_manage_fee": "请输入合适的管理费",
-  "manage_fee_not_less_than_10_percent": "管理费不能小于{feeRate}%",
-  "manage_fee_not_over_20_percent": "管理费不能大于{feeRate}%",
-  "please_input_valid_data": "请正确的输入数据",
-  "take_picture": "拍照",
-  "you": "你",
-  "creator": "创建者",
-  "please_read_and_agree_wallet_policy": "为了更好地体验Titan去中心化钱包，请您先仔细阅读并同意《海伯利安钱包服务协议》",
-  "please_read_and_agress_dex_policy": "为了更好地体验Titan去中心化兑换，请您先仔细阅读并同意《海伯利安去中心化兑换服务协议》",
-  "agree_and_continue": "同意并继续",
-  "i_hava_read_and_agree_policy": "我已阅读并同意",
-  "still_need_secs": "还需 {count} 秒",
-  "user_policy": "用户协议",
-  "contact_us": "联系我们",
-  "atlas_mapping_completed": "主网映射已结束，如有疑问请"
+  "map3_pre_edit_next_epoch": " The initiator shall make renewal decision and set a new commission in the second last week before node expiration. Delegators shall decide whether to follow or not in the last week before node expiration. ",
+  "map3_delegate_amount_hint": " {startMin}HYN are required before initiating. Each delegation is not less{delegateMin}HYN",
+  "total_staking": "Total staking",
+  "current_staking": "Current staking",
+  "min_staking": "Minimum staking",
+  "please_retain_gas_fee": "Please keep some HYN as gas fee",
+  "old_map3": "Old Map3",
+  "current_reward": "Current reward",
+  "current_reward_zero": "Current reward is Null!",
+  "you_create_or_join_node": "You initiated or delegated {num}Map3 nodes in total",
+  "confirm_collect": "Confirm withdraw",
+  "confirm_collect_reward_to_wallet": "From{pretext}, current rewards are: {balance} HYN confirm withdrawal",
+  "preset_for_next_period": "Preset for the renewal node ",
+  "map3_next_period_manage_fee": "Commission for the renewal node",
+  "confirm_mod": "Confirm a change",
+  "confirm_stop_auto_renew": " You will turn off auto renew. You can't edit once being confirmed. Are you going to continue?",
+  "confirm_stop_follow_renew": " You will Not follow the renew. You can't edit it once being confirmed. Are you going to continue? ",
+  "confirm_open_auto_renew": " You will turn on auto renew. The commission is {feeRate}%. You can't edit it once being confirmed. Are you going to continue?",
+  "please_setup_manage_fee": "Please enter a commission",
+  "confirm_follow_renew": " You will follow the renew. You can't edit it once being confirmed. Are you going to continue? ",
+  "manage_fee_setup": "Set a commission",
+  "please_input_valid_manage_fee": " Please enter a valid commission ",
+  "manage_fee_not_less_than_10_percent": "Commission is more than{feeRate}%",
+  "manage_fee_not_over_20_percent": "Commission is less than {feeRate}%",
+  "please_input_valid_data": "Please enter valid data",
+  "take_picture": "Take a photo",
+  "you": "You",
+  "creator": "Creator",
+  "please_read_and_agree_wallet_policy": " Pease read and agree to the Terms of Service for Hyperion Wallet before using Titan decentralized wallet ",
+  "please_read_and_agress_dex_policy": " Pease read and agree to the Terms of Service for HSWAP before using the function ",
+  "agree_and_continue": "Agree and continue",
+  "i_hava_read_and_agree_policy": " I have read and agree to it. ",
+  "still_need_secs": "{count} seconds are needed",
+  "user_policy": "User Agreement",
+  "contact_us": "Contact us",
+  "atlas_mapping_completed": "Mainnet migration is over, if you have any problem, please contact "
 }
