[update] update detail page

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -411,7 +411,7 @@
   "signal_chart_last_month_numbers_func": "最近一个月{scanName}数据增量：",
   "signal_total_data": "信号数据总量：",
   "poi_total_data": "用户贡献的POI数据分布：",
-  "wait_start_node_contract": "待启动的节点",
+  "wait_start_node_contract": "推荐抵押节点",
   "earth_outpace_server_node": "全球超过%d个地球服务站点",
   "map_provide_stable_server": "为海伯利安地图提供稳定可靠的地图服务",
   "create_contract": "创建节点",
@@ -572,7 +572,7 @@
   "collect_request_have_post_please_wait_hint": "提取请求已提交，请耐心等候",
   "happy_get_all_reward_hint": "恭喜你成功提取所有奖励",
   "your_last_output_to_contract_func": "你的最新提取：{input}, {task_pending}",
-  "no_pengding_node_contract_hint": "没有待启动的节点\n您可以创建节点",
+  "no_pengding_node_contract_hint": "没有推荐抵押节点\n您可以创建节点",
   "delegation_full_will_active_hint": "抵押已满，即将启动",
   "expire_date": "期满可提",
   "contract_share_content": "\"{who}\"在{appName}上发现了海伯利安{nodeName}节点，管理费只需{annualized}，邀请你前往围观！",
