fixed fee, translate

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1056,7 +1056,7 @@
   "check_after_has_wallet": "请创建或导入钱包后查看",
   "my_nodes_empty": "没有我的节点，您可以创建节点",
   "no_lastest_active_nodes": "没有最新启动的节点，您可以创建节点",
-  "check_reward": "查看收益",
+  "check_reward": "更多节点/我的收益",
   "check_more": "查看更多",
   "map3_nodes": "Map3地图服务节点",
   "map3_nodes_v1": "Map3节点（v1.0）",
