atlas detail transfer

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -1216,5 +1216,33 @@
   "contact_us": "Contact us",
   "atlas_mapping_completed": "Mainnet migration is over, if you have any problem, please contact ",
   "policy_hswap": "Terms of Service for HSWAP",
-  "policy_wallet": "Terms of Service for Hyperion Wallet"
+  "policy_wallet": "Terms of Service for Hyperion Wallet",
+  "max_staking_num": "最大抵押量",
+  "fee_rate": "费率",
+  "max_fee_rate": "最大费率",
+  "fee_rate_trim": "费率幅度",
+  "node_record_empty": "节点记录为空",
+  "this_atlas_node_is_inactive": "该Atlas节点处于非活跃状态",
+  "reason_obstacles_sign_rate_withdrawn_mortgage": "(可能的原因是设备运行障碍/设备出块签名率低/节点主已经退出抵押)",
+  "your_device_normal_reactivate_node": "，如果你的设备已经恢复正常运行，请重新激活该节点。",
+  "reactivate": "重新激活",
+  "active_node": "激活节点",
+  "ok": "好的",
+  "node_master_reactivate_contact_master": "只有节点主才能重新激活节点，请联系节点主激活",
+  "receive_reward": "领取奖励",
+  "dont_join_atlas_no_reward": "你还没有参与该Atlas节点抵押，不可以领取节点奖励。",
+  "receive": "领取",
+  "withdraw_atlas_reward_staking_rate_distribute": "你将提取当前Atlas奖励，奖励会按照抵押比率分配到你的Map3节点抵押者。",
+  "cant_receive_reward_contact_master_distribute": "你不能领取节点奖励，你可以联系节点主去领取并分配节点奖励。",
+  "click_receive": "点击领取",
+  "node_cumulative_reward": "节点累计奖励",
+  "manage_node_staking": "管理节点抵押",
+  "my_map3": "我的Map3",
+  "switch_view_different_map3_staking_status": "(切换查看不同Map3节点抵押情况)",
+  "map3_is_mortgaged": "Map3已抵押",
+  "can_withdraw_to_map3": "可提往Map3",
+  "node_info": "节点信息",
+  "cancel_delegate_no_atlas_reward_confirm_cancel": "撤销抵押后将不再获得Atlas节点出块奖励，当前为止获得的奖励，将在Atlas节点主领取奖励时发送至您的钱包，撤销之后可以再次抵押，确定要撤销吗？",
+  "delegate": "抵押",
+  "no_data": "暂无"
 }
