--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1252,6 +1252,5 @@
   "can_withdraw_to_map3": "可提往Map3",
   "node_info": "节点信息",
   "cancel_delegate_no_atlas_reward_confirm_cancel": "撤销抵押后将不再获得Atlas节点出块奖励，当前为止获得的奖励，将在Atlas节点主领取奖励时发送至您的钱包，撤销之后可以再次抵押，确定要撤销吗？",
-  "delegate": "抵押",
-  "no_data": "暂无"
+  "staking": "抵押"
 }
