add atlas request pending and update wallet account detail ui

--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -1088,13 +1088,13 @@
   "transfer_id": "交易號",
   "from_address": "收款地址",
   "transfer_to_address": "付款地址",
-  "transfer_hash": "轉賬Hash:",
+  "transfer_hash": "轉賬哈希:",
   "transfer_status": "狀態:",
   "tx_age": "紀元:",
   "tx_block": "區塊",
   "tx_time": "時間",
-  "tx_from_address": "付款地址",
-  "tx_to_address": "收款地址",
+  "tx_from_address": "發送方",
+  "tx_to_address": "接收方",
   "tx_amount": "金額",
   "tx_type": "類型",
   "tx_input_data": "輸入數據",
