--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -1097,13 +1097,13 @@
   "transfer_id": "交易号",
   "from_address": "收款地址",
   "transfer_to_address": "付款地址",
-  "transfer_hash": "转账Hash:",
+  "transfer_hash": "转账哈希:",
   "transfer_status": "状态:",
   "tx_age": "纪元:",
   "tx_block": "区块",
   "tx_time": "时间",
-  "tx_from_address": "付款地址",
-  "tx_to_address": "收款地址",
+  "tx_from_address": "发送方",
+  "tx_to_address": "接收方",
   "tx_amount": "金额",
   "tx_type": "类型",
   "tx_input_data": "输入数据",
